foi adicionado lorem50

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi eius
+      fugiat neque impedit assumenda aliquid iste labore inventore cumque
+      voluptas sed libero, magnam perspiciatis eaque eum iure non nobis
+      necessitatibus a vel esse ea eos. Non aliquid praesentium dicta excepturi
+      mollitia cumque vitae officia at ipsum natus, similique, molestiae fuga.
+    </p>
+  </body>
 </html>
